# ParticleSystem_PerformanceTest

./: .gitignore  README.md
Android/: settings.gradle
Android/app/: build.gradle
Android/gradle/wrapper/: gradle-wrapper.properties
VisualStudio/: ParticleSystem_PerformanceTest.sln  ParticleSystem_PerformanceTest.vcxproj  ParticleSystem_PerformanceTest.vcxproj.filters
src/android/: CMakeLists.txt  jni_bridge.cpp
src/android/device/: android_file_handler.cpp  android_file_handler.h
src/common/: defines.h  gl.h  logger.h  test_app.cpp  test_app.h
src/common/device/: file_handler.cpp  file_handler.h
src/common/gl/: camera.h  gl_util.cpp  gl_util.h  material.h  shader.h  texture.h  texture_2d.h
src/common/glm/: common.hpp
src/common/optick/: optick.h
src/common/particle_system/: cpu_i_module.h  cpu_i_particle_system.cpp  cpu_i_particle_system.h  cpu_module_color_over_lifetime.cpp  cpu_module_color_over_lifetime.h  cpu_module_emission.cpp  cpu_module_emission.h  cpu_module_noise_position.cpp  cpu_module_noise_position.h  cpu_module_velocity_over_lifetime.cpp  cpu_module_velocity_over_lifetime.h  cpu_parallel_instance_particle_system.cpp  cpu_parallel_instance_particle_system.h  cpu_parallel_particle_system.cpp  cpu_parallel_particle_system.h  cpu_particle.cpp  cpu_particle.h  cpu_particle_system.cpp  cpu_particle_system.h  cpu_serial_instance_particle_system.cpp  cpu_serial_instance_particle_system.h  cpu_serial_particle_system.cpp  cpu_serial_particle_system.h  cs_i_module.h  cs_i_module_struct.h  cs_module_color_over_lifetime.cpp  cs_module_color_over_lifetime.h  cs_module_color_over_lifetime_struct.cpp  cs_module_color_over_lifetime_struct.h  cs_module_emission.cpp  cs_module_emission.h  cs_module_emission_struct.cpp  cs_module_emission_struct.h  cs_particle.h  (+29 more)
src/windows/: main.cpp
(+50 files in other folders)
